opam-version: "1.2"
version: "v0.9.1"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/re2"
bug-reports: "https://github.com/janestreet/re2/issues"
dev-repo: "https://github.com/janestreet/re2.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "re2" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core_kernel"             {>= "v0.9" & < "v0.10"}
  "jbuilder"                {build & >= "1.0+beta15"}
  "ppx_driver"              {>= "v0.9.2" & < "v0.10"}
  "ppx_jane"                {>= "v0.9" & < "v0.10"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
OCaml bindings for RE2, Google's regular expression library
"
depexts: [
 [ ["fedora"] ["gcc-c++"] ]
 [ ["oraclelinux"] ["gcc-c++"] ]
]
