opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/re2"
bug-reports: "https://github.com/janestreet/re2/issues"
dev-repo: "git+https://github.com/janestreet/re2.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
OCaml bindings for RE2, Google's regular expression library
"
depexts: [
 [ ["fedora"] ["gcc-c++"] ]
 [ ["oraclelinux"] ["gcc-c++"] ]
]
