opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/re2"
bug-reports: "https://github.com/janestreet/re2/issues"
dev-repo: "git+https://github.com/janestreet/re2.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/re2/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "jane_rope"
  "ppx_jane"
  "ppx_stable_witness"
  "regex_parser_intf"
  "dune"               {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml bindings for RE2, Google's regular expression library"
description: "
"
